[package]
name = "earplugs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.4"
structopt = "0.3.25"
bincode = "2.0.0-alpha.1"

[dependencies.winapi]
version = "0.3.9"
features = [
    "combaseapi",
    "mmdeviceapi",
    "winbase",
    "winerror"
]
