[package]
name = "audio-capture"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-alpha.1", optional = true }

[dependencies.winapi]
version = "0.3.9"
features = [
    "audioclient",
    "audiosessiontypes",
    "combaseapi",
    "ksmedia",
    "mmdeviceapi",
    "mmreg",
    "objbase",
    "winbase",
    "winerror"
]
